--- a/statistical_analysis.ipynb
+++ b/statistical_analysis.ipynb
@@ -131,13 +131,10 @@
    "outputs": [],
    "source": [
     "def process(feature):\n",
-    "#     feature = [np.log(v) for v in feature]\n",
     "    feature = [v**(-0.215) for v in feature]\n",
     "    return feature\n",
     "\n",
     "def scatter_one_feature(feature_name, data):\n",
-    "#     OC = pd.read_csv(\"./ovarian_cancer.csv\")\n",
-    "#     status = data[\"status\"].replace(\"Healthy\", 0).replace(\"Control\", 1).replace(\"Case\", 2)\n",
     "    feature = data[feature_name]\n",
     "    \n",
     "    feature = process(feature)\n",
@@ -296,8 +293,7 @@
     "for col in top20:\n",
     "    healthy = HEALTHY[col]\n",
     "    case = CASE[col]\n",
-    "    p_value_ranks[col] = mannwhitneyu(healthy, case).pvalue\n",
-    "#     print(col, \":\", mannwhitneyu(healthy, case))"
+    "    p_value_ranks[col] = mannwhitneyu(healthy, case).pvalue\n"
    ]
   },
   {
